k8s/devops-toolkit/templates/deployment.yaml
---
# Source: devops-toolkit/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolkit
    version: 2.6.2
    chart: devops-toolkit-2.6.2
    release: devops-toolkit
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: devops-toolkit
  template:
    metadata:
      labels:
        app: devops-toolkit
    spec:
      containers:
      - name: ui
        image: "vfarcic/devops-toolkit-series:2.6.2"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 15m
            memory: 10Mi
          requests:
            cpu: 5m
            memory: 5Mi
